# segment-geospatial

./: .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  index.html  index.md  mkdocs.yml  objects.inv  package_plugin.py  pyproject-codespell.precommit-toml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  search.json  setup.cfg  setup.py  sitemap.xml  zensical.toml
.github/: FUNDING.yml  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: build.yml  docker-image.yml  docker-publish.yml  docs-build.yml  docs.yml  draft-pdf.yml  macos.yml  publish.yml  pypi.yml  ubuntu.yml  windows.yml
agent-harness/: SAMGEO.md  setup.py
agent-harness/cli_anything/samgeo/: README.md  __init__.py  __main__.py  samgeo_cli.py
agent-harness/cli_anything/samgeo/core/: __init__.py  data.py  export.py  model.py  project.py  segment.py  session.py  vector.py
api/: index.html
assets/: README.md  index.html
assets/javascripts/: bundle.0df4f2d0.min.js
assets/stylesheets/classic/: main.6cf5c66f.min.css
assets/stylesheets/modern/: main.5e19f6ca.min.css
caption/: index.html
changelog/: index.html
changelog_update/: changelog_update.py  index.html
common/: index.html
contributing/: contributing.md  index.html
detectree2/: index.html
docs/: api.md  caption.md  changelog.md  common.md  contributing.md  detectree2.md  efficient_sam.md  faq.md  fast_sam.md  fer.md  hq_sam.md  index.md  installation.md  maxar_open_data.ipynb  sam3d.md  samgeo3.md  text_sam.md  usage.md
docs/examples/: arcgis.ipynb  automatic_mask_generator.ipynb  automatic_mask_generator_hq.ipynb  box_prompts.ipynb  detectree2.ipynb  fast_sam.ipynb  input_prompts.ipynb  input_prompts_hq.ipynb  maxar_open_data.ipynb  sam2_box_prompts.ipynb  sam2_point_prompts.ipynb  sam2_text_prompts.ipynb  sam2_video.ipynb  sam3_automated_segmentation.ipynb  sam3_batch_segmentation.ipynb  sam3_box_prompts.ipynb  sam3_image_segmentation.ipynb  sam3_image_segmentation_jpg.ipynb  sam3_interactive.ipynb  sam3_object_tracking.ipynb  sam3_point_prompts_batch.ipynb  sam3_tiled_segmentation.ipynb  sam3_video_masks.ipynb  sam3_video_prompts.ipynb  sam3_video_segmentation.ipynb  sam3d.ipynb  satellite-predictor.ipynb  satellite.ipynb  swimming_pools.ipynb  text_prompts.ipynb  text_prompts_batch.ipynb  text_swimming_pools.ipynb  wildfire_burn_area.ipynb
docs/workshops/: AIforGood_2025.ipynb  IPPN_2024.ipynb  purdue.ipynb
examples/: basic_usage.ipynb  clay_embeddings_example.py  fast_sam.ipynb  maxar_open_data.ipynb  sam3_object_tracking.ipynb  satellite-predictor.ipynb  text_prompts_batch.ipynb
examples/arcgis/: arcgis.ipynb  index.html
examples/automatic_mask_generator/: automatic_mask_generator.ipynb  index.html
examples/automatic_mask_generator_hq/: automatic_mask_generator_hq.ipynb  index.html
examples/box_prompts/: box_prompts.ipynb  index.html
examples/data/: tree_boxes.geojson
examples/detectree2/: detectree2.ipynb  index.html
examples/fast_sam/: fast_sam.ipynb  index.html
examples/image_captioning/: image_captioning.ipynb  index.html
examples/input_prompts/: index.html  input_prompts.ipynb
examples/input_prompts_hq/: index.html  input_prompts_hq.ipynb
examples/maxar_open_data/: index.html  maxar_open_data.ipynb
examples/sam2_automatic/: index.html  sam2_automatic.ipynb
examples/sam2_box_prompts/: index.html
examples/sam2_point_prompts/: index.html  sam2_point_prompts.ipynb
examples/sam2_predictor/: index.html  sam2_predictor.ipynb
examples/sam2_text_prompts/: index.html
examples/sam2_video/: index.html  sam2_video.ipynb
examples/sam3_automated_segmentation/: index.html  sam3_automated_segmentation.ipynb
examples/sam3_batch_segmentation/: index.html
examples/sam3_box_prompts/: index.html
examples/sam3_image_segmentation/: index.html  sam3_image_segmentation.ipynb
examples/sam3_image_segmentation_jpg/: index.html  sam3_image_segmentation_jpg.ipynb
examples/sam3_interactive/: index.html  sam3_interactive.ipynb
examples/sam3_object_tracking/: index.html
examples/sam3_point_prompts/: index.html  sam3_point_prompts.ipynb
examples/sam3_point_prompts_batch/: index.html
examples/sam3_tiled_segmentation/: index.html  sam3_tiled_segmentation.ipynb
examples/sam3_video_masks/: index.html
examples/sam3_video_prompts/: index.html  sam3_video_prompts.ipynb
examples/sam3_video_segmentation/: index.html
examples/satellite/: index.html  satellite.ipynb
examples/satellite-predictor/: index.html  satellite-predictor.ipynb
examples/swimming_pools/: index.html  swimming_pools.ipynb
examples/text_prompts/: index.html  text_prompts.ipynb
examples/text_prompts_batch/: index.html
examples/text_swimming_pools/: index.html
examples/tree_mapping/: index.html  tree_mapping.ipynb
faq/: index.html
fast_sam/: index.html
hq_sam/: index.html
installation/: index.html  installation.md
paper/: paper.bib  paper.md
qgis-samgeo-plugin/: LICENSE  README.md  __init__.py  install_plugin.py  install_plugin.sh  map_tools.py  metadata.txt  resources.py  samgeo_plugin.py  test_plugin.py
samgeo/: FER.py  __init__.py  api.py  caption.py  clay.py  clay_metadata.yaml  common.py  detectree2.py  efficient_sam.py  fast_sam.py  fer.py  hq_sam.py  index.html  model_registry.py  requirements.txt  sam3d.py  samgeo.md  samgeo.py  samgeo2.py  samgeo3.py  text_sam.py  utmconv.py
samgeo2/: index.html  samgeo2.md
samgeo3/: index.html
scripts/: convert_notebooks.py  upload_to_qgis_plugin_repo.py
search/: search_index.json
tests/: __init__.py  test_api.py  test_common.py  test_model_registry.py  test_samgeo.py  test_samgeo3.py  test_utmconv.py
text_sam/: index.html
usage/: index.html  usage.md
workshops/: IPPN_2024.ipynb  jupytext.toml
workshops/AIforGood_2025/: AIforGood_2025.ipynb  index.html
workshops/IPPN_2024/: index.html
workshops/cn_workshop/: cn_workshop.ipynb  index.html
workshops/purdue/: index.html  purdue.ipynb
(+7 files in other folders)
