[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "segment-geospatial"
version = "0.13.0"
dynamic = [
    "dependencies",
]
description = "Meta AI' Segment Anything Model (SAM) for Geospatial Data."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT license"}
keywords = ["samgeo"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
authors = [{name = "Qiusheng Wu", email = "giswqs@gmail.com"}]

[project.optional-dependencies]
all = ["leafmap",
    "rasterio",
    "geopandas",
    "shapely>=2.1.1",
    "fiona",
    "tqdm",
    "numpy",
    "torch",
    "torchvision",
    "Pillow",
    "matplotlib",
    "scikit-image",
    "scipy",
    "opencv-python-headless",
    "pyproj>=3.7.2",
    "segment-anything-fast",
    "gdal",
    "segment_anything",
    "segment_anything_hq",
    "sam2",
    "matplotlib", # some functions require matplotlib for visualization
    "huggingface_hub",
    "groundingdino-py"
    ]
core = [
    "rasterio",
    "geopandas",
    "shapely>=2.1.1",
    "fiona",
    "tqdm",
    "numpy",
    "torch",
    "torchvision",
    "Pillow",
    "matplotlib",
    "scikit-image",
    "scipy",
    "opencv-python-headless",
    "pyproj>=3.7.2",
    "segment-anything-fast"
]
fer = [
    "gdal",
    "shapely>=2.1.1",
    ]
hq = [
    "segment_anything",
    "segment_anything_hq",
    "opencv-python-headless",
    "torch",
    "numpy",
    "matplotlib", # some functions require matplotlib for visualization
    ]
samgeo = [
    "opencv-python-headless",
    "geopandas",
    "numpy",
    "torch",
    "segment_anything",
    "matplotlib", # some functions require matplotlib for visualization
]
samgeo2 = [
    "opencv-python-headless",
    "Pillow",
    "torch",
    "numpy",
    "tqdm",
    "sam2",
    "matplotlib", # some functions require matplotlib for visualization
]
text = [
    "numpy",
    "torch",
    "huggingface_hub",
    "Pillow",
    "segment_anything",
    "opencv-python-headless",
    "Pillow",
    "torch",
    "numpy",
    "tqdm",
    "sam2",
    "rasterio",
    "groundingdino-py",
    "matplotlib", # some functions require matplotlib for visualization
]

[tool]
[tool.setuptools.packages.find]
include = ["samgeo*"]
exclude = ["docs*"]


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.distutils.bdist_wheel]
universal = true

[tool.bumpversion]
current_version = "0.13.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "samgeo/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.flake8]
exclude = [
    "docs",
]
max-line-length = 88

[tool.setuptools_scm]

[project.urls]
Homepage = "https://github.com/opengeos/segment-geospatial"