[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "segment-geospatial"
version = "0.13.0"
dynamic = [
    "dependencies",
]
description = "Meta AI' Segment Anything Model (SAM) for Geospatial Data."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT license"}
keywords = ["samgeo"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
authors = [{name = "Qiusheng Wu", email = "giswqs@gmail.com"}]

[project.optional-dependencies]
all_deps = ["leafmap",
    "rasterio",
    "geopandas",
    "shapely>=2.1.1",
    "fiona",
    "tqdm",
    "numpy",
    "torch",
    "torchvision",
    "Pillow",
    "matplotlib",
    "scikit-image",
    "scipy",
    "opencv-python-headless",
    "pyproj>=3.7.2",
    "segment-anything-fast",
    "gdal",
    "segment_anything",
    "segment_anything_hq",
    "sam2",
    "matplotlib", # some functions require matplotlib for visualization
    "huggingface_hub",
    "groundingdino-py"
    ]
all = [
    "leafmap",
    "segment-geospatial[fast, hq, fer, samgeo, samgeo2, text]",
    "localtileserver",
    "ipykernel",
    "fiona",
    "matplotlib", # some functions require matplotlib for visualization
    ]
core = [
    "rasterio",
    "geopandas",
    "shapely>=2.1.1",
    "fiona",
    "tqdm",
    "numpy",
    "torch",
    "torchvision",
    "Pillow",
    "matplotlib",
    "scikit-image",
    "scipy",
    "opencv-python-headless",
    "pyproj>=3.7.2",
]
fast = [
    "opencv-python-headless",
    "numpy",
    "torch",
    "segment-anything-fast",
    ]
fer = [
    "gdal",
    "shapely>=2.1.1",
    ]
hq = [
    "segment_anything",
    "segment_anything_hq",
    "opencv-python-headless",
    "torch",
    "numpy",
    ]
samgeo = [
    "opencv-python-headless",
    "geopandas",
    "numpy",
    "torch",
    "segment_anything",
    "huggingface_hub",
]
samgeo2 = [
    "segment_geospatial[samgeo]",
    "Pillow",
    "sam2",
    "huggingface_hub",
    "xarray",
    "rioxarray",
    "scikit-image",
    "scipy",
]
text = [
    "segment_geospatial[samgeo2]",
    "groundingdino-py",
]

[tool]
[tool.setuptools.packages.find]
include = ["samgeo*"]
exclude = ["docs*"]


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.distutils.bdist_wheel]
universal = true

[tool.bumpversion]
current_version = "0.13.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "samgeo/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.flake8]
exclude = [
    "docs",
]
max-line-length = 88

[tool.setuptools_scm]

[project.urls]
Homepage = "https://github.com/opengeos/segment-geospatial"