[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "segment-geospatial"
version = "1.1.0"
dynamic = [
    "dependencies",
]
description = "Meta AI' Segment Anything Model (SAM) for Geospatial Data."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT license"}
keywords = ["samgeo"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
authors = [{name = "Qiusheng Wu", email = "giswqs@gmail.com"}]

[project.optional-dependencies]
core = [
    "gdown",
    "geopandas",
    "numpy",
    "opencv-python-headless",
    "patool",
    "Pillow",
    "pyproj>=3.7.2",
    "rasterio",
    "segment_anything",
    "shapely",
    "torch",
    "tqdm",
]
fast = [
    "segment_geospatial[core]",
    "segment-anything-fast",
    "sam2",
    ]
fer = [
    "segment_geospatial[core]",
    "gdal",
    ]
hq = [
    "segment_geospatial[core]",
    "segment_anything_hq",
    "sam2",
    "timm",
    ]
samgeo = [
    "segment_geospatial[core]",
    "huggingface_hub",
]
samgeo2 = [
    "segment_geospatial[samgeo]",
    "sam2",
    "xarray",
    "rioxarray",
    "scikit-image",
    "scipy",
]
samgeo3 = [
    "segment_geospatial[core]",
    "sam3",
    "scikit-learn",
    "scikit-image",
    "transformers",
    "buildingregulariser",
    "leafmap",
    "localtileserver",
    "spacy",
    "triton>=3.5.1; sys_platform == 'linux'",
    "triton-windows>=3.3.0.post19; sys_platform == 'windows'",
    "transformers>=5.0.0rc0",
    "xarray"
]
text = [
    "segment_geospatial[samgeo2]",
    "groundingdino-py",
]
all = [
    "segment-geospatial[fast, hq, fer, samgeo, samgeo2, samgeo3, text]",
]
extra = [
    "leafmap",
    "segment-geospatial[all]",
    "localtileserver",
    "ipykernel",
    "fiona",
    "matplotlib",
]

[tool]
[tool.setuptools.packages.find]
include = ["samgeo*"]
exclude = ["docs*"]


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.distutils.bdist_wheel]
universal = true

[tool.bumpversion]
current_version = "1.1.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "samgeo/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.flake8]
exclude = [
    "docs",
]
max-line-length = 88

[tool.setuptools_scm]

[project.urls]
Homepage = "https://github.com/opengeos/segment-geospatial"
